clusters/on-prem-cluster/core/oauth2-proxy/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: oauth2-proxy-ingress
    namespace: oauth2-proxy
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:uckOKUW8PsM6K5uWEpxD0Fn9gcWx,iv:y/td+jNOTMAuGzbGA24fy7bQ2XxagC86thDwQTEsH1w=,tag:yFn3wKzQ1QFMBN3bwaZZjg==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:76+IhrICZ9VDL/OTKA3PkcDCJRQk,iv:Y25xGZWYpAn4g//hBI7t4oC29rs1y5Y09tvDqhqO1kI=,tag:xsusozv3WK7L7NO7pSjpOA==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: oauth2-proxy-oauth2-proxy
                        port:
                            number: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1xl8mrtu70kvhjdl2nva6dpt8wsy3fhmz6605fmwjujc3zztyeyzqd07nvv
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPMVdpOG9NNU8wMjZzeVll
[...]
            uTmdEkGQGOqhp1PLXS7cZtB5/M0U2HCCIXAutL24H4sxojuDriPkvA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-05-27T14:58:28Z"
    mac: ENC[AES256_GCM,data:gLneooC8hvcQGWYIeNlxpH3HuN3WLY7WzUUcA/4ScMmIsFrp9p2ryGiFgtyzUAk9hoXR+50+Cmgk4Q13/xZaT3Yr7B3/jIyffzzbZicwlxjosoR/XnhSpmMYmXPSa9/kJUYHqPZPH4BLpKJfnuREB2ymD05cjqPkdHinhC0Mnls=,iv:L8drW8laKm/vx3MkPwo3uL5uB2rbsBjAJLEkTq2JuEA=,tag:e5wLeO04ysLxY7BkW76X7A==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalUrl)$
    version: 3.7.3
